--- a/clothapp/templates/order_placed_page.html
+++ b/clothapp/templates/order_placed_page.html
@@ -8,7 +8,7 @@
   </h2>
   <div class="no-cart-items">
     <a href="{% url 'home_page' %}"
-      ><input type="button" value="Click Here To Shop"
+      ><input type="button" value="Click Here To Shop More"
     /></a>
   </div>
   {% else %}
