--- a/clothapp/templates/payment_page.html
+++ b/clothapp/templates/payment_page.html
@@ -1,19 +1,157 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Clothing Store</title>
-  </head>
-  <body>
-    <div class="redirecting text-center">
-      <h2>Redirecting You To Payment Merchant...</h2>
-      <h2>Please Do not Refresh Your Page...</h2>
-      <form action="" method="POST" name="payment-paytm"></form>
+{% extends './base.html' %}{% block content %} {% load static %}
+<style>
+  /**
+ * The CSS shown here will not be introduced in the Quickstart guide, but shows
+ * how you can use CSS to style your Element's container.
+ */
+  .StripeElement {
+    box-sizing: border-box;
+
+    height: 40px;
+
+    padding: 10px 12px;
+
+    border: 1px solid transparent;
+    border-radius: 4px;
+    background-color: white;
+
+    box-shadow: 0 1px 3px 0 #e6ebf1;
+    -webkit-transition: box-shadow 150ms ease;
+    transition: box-shadow 150ms ease;
+  }
+
+  .StripeElement--focus {
+    box-shadow: 0 1px 3px 0 #cfd7df;
+  }
+
+  .StripeElement--invalid {
+    border-color: #fa755a;
+  }
+
+  .StripeElement--webkit-autofill {
+    background-color: #fefde5 !important;
+  }
+  #payment-form button {
+    position: relative;
+    left: 50%;
+    transform: translateX(-50%);
+    margin-top: 30px;
+    padding: 5px 10px 5px 10px;
+    color: white;
+    background: black;
+    font-size: 16px;
+    transition: background 0.2s ease;
+    border-radius: 2px;
+    border: none;
+    outline: none;
+    cursor: pointer;
+  }
+  #payment-form button:hover {
+    color: black;
+    background: #d6bb86;
+  }
+</style>
+
+<div class="payment-container" style="width: 50%; margin: 70px auto;">
+  <div class="payment_info">
+    <div style="margin: 0 0 30px 0;">
+      <h2>Order Amount :</h2>
+      <p style="font-size: 22px;">Rs.{{total}}</p>
     </div>
-    <script>
-      const form = document.querySelector(".redirecting form");
+    <div style="margin: 0 0 30px 0;">
+      <h2>Order ID :</h2>
+      <p style="font-size: 18px;">{{order_id}}</p>
+    </div>
+  </div>
+  <script src="https://js.stripe.com/v3/"></script>
+
+  <form action="{% url 'payment_page' %}" method="post" id="payment-form">
+    {% csrf_token %}
+    <div class="form-row">
+      <label for="card-element" style="font-size: 20px;">
+        Credit or debit card
+      </label>
+      <div id="card-element">
+        <!-- A Stripe Element will be inserted here. -->
+      </div>
+
+      <!-- Used to display form errors. -->
+      <div id="card-errors" role="alert"></div>
+    </div>
+
+    <button>Submit Payment</button>
+  </form>
+  <script>
+    // Create a Stripe client.
+    var stripe = Stripe("pk_test_EUTg4KeQsk5L0LsCz40kAOFm00aVLpKxxn");
+
+    // Create an instance of Elements.
+    var elements = stripe.elements();
+
+    // Custom styling can be passed to options when creating an Element.
+    // (Note that this demo uses a wider set of styles than the guide below.)
+    var style = {
+      base: {
+        color: "#32325d",
+        fontFamily: '"Helvetica Neue", Helvetica, sans-serif',
+        fontSmoothing: "antialiased",
+        fontSize: "16px",
+        "::placeholder": {
+          color: "#aab7c4",
+        },
+      },
+      invalid: {
+        color: "#fa755a",
+        iconColor: "#fa755a",
+      },
+    };
+
+    // Create an instance of the card Element.
+    var card = elements.create("card", { style: style });
+
+    // Add an instance of the card Element into the `card-element` <div>.
+    card.mount("#card-element");
+
+    // Handle real-time validation errors from the card Element.
+    card.addEventListener("change", function (event) {
+      var displayError = document.getElementById("card-errors");
+      if (event.error) {
+        displayError.textContent = event.error.message;
+      } else {
+        displayError.textContent = "";
+      }
+    });
+
+    // Handle form submission.
+    var form = document.getElementById("payment-form");
+    form.addEventListener("submit", function (event) {
+      event.preventDefault();
+
+      stripe.createToken(card).then(function (result) {
+        if (result.error) {
+          // Inform the user if there was an error.
+          var errorElement = document.getElementById("card-errors");
+          errorElement.textContent = result.error.message;
+        } else {
+          // Send the token to your server.
+          stripeTokenHandler(result.token);
+        }
+      });
+    });
+
+    // Submit the form with the token ID.
+    function stripeTokenHandler(token) {
+      // Insert the token ID into the form so it gets submitted to the server
+      var form = document.getElementById("payment-form");
+      var hiddenInput = document.createElement("input");
+      hiddenInput.setAttribute("type", "hidden");
+      hiddenInput.setAttribute("name", "stripeToken");
+      hiddenInput.setAttribute("value", token.id);
+      form.appendChild(hiddenInput);
+
+      // Submit the form
       form.submit();
-    </script>
-  </body>
-</html>
+    }
+  </script>
+</div>
+{% endblock %}
