--- a/clothapp/templates/base.html
+++ b/clothapp/templates/base.html
@@ -17,6 +17,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/solid.min.css"
     />
     <link rel="stylesheet" href="{% static 'css/style.css' %}" />
+    <link rel="stylesheet" href="{% static 'css/style_res.css' %}" />
     <title>Clothing Store</title>
   </head>
   <body>
