--- a/clothapp/templates/product_page.html
+++ b/clothapp/templates/product_page.html
@@ -2,6 +2,7 @@
 <div class="image-modal">
   <div class="image-modal-image">
     <span class="close-modal-span user-sel cursor-pointer">&times;</span>
+    <img src="" alt="" class="height-100 width-100" />
   </div>
 </div>
 
