Changed Home Page

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -138,22 +138,30 @@ a:link {
   background-repeat: no-repeat;
   background-size: cover;
 }
-.home-sub-container h2 {
-  font-size: 50px;
+.home-sub-container {
+  position: relative;
+  margin-right: 30px;
+}
+.home-sub-container h1 {
+  font-size: 5rem;
   color: #d6bb86;
+  transition: all 0.2s ease-out;
 }
 .shop-category button {
-  font-size: 26px;
+  font-size: 20px;
   margin: 20px;
   padding: 10px;
   outline: none;
   border: none;
   border-radius: 5px;
-  transition: background 0.2s ease-out;
+  background: #2f2e33;
+  color: #d8c59f;
+  transition: all 0.2s ease-out;
 }
 .shop-category button:hover {
-  background: black;
-  color: #d6bb86;
+  font-weight: bold;
+  font-size: 22px;
+  text-decoration: underline;
 }
 
 /* **Category Page Styling** */
