Changed Name and Added Products

--- a/clothapp/templates/base.html
+++ b/clothapp/templates/base.html
@@ -18,13 +18,15 @@
     />
     <link rel="stylesheet" href="{% static 'css/style.css' %}" />
     <link rel="stylesheet" href="{% static 'css/style_res.css' %}" />
-    <title>Clothing Store</title>
+    <title>
+      UrbanTrend{{page_name}}
+    </title>
   </head>
   <body>
     <div class="navigation d-flex align-center justify-space-around width-100">
       <div class="site-name">
         <h2 class="user-sel">
-          <a href="{% url 'home_page' %}">Clothing Store</a>
+          <a href="{% url 'home_page' %}">UrbanTrend</a>
         </h2>
       </div>
       <div class="nav-links-container height-100">
