--- a/clothapp/templates/home_page.html
+++ b/clothapp/templates/home_page.html
@@ -1,7 +1,7 @@
 {% extends './base.html' %} {% block content %}
 <div class="home-container d-flex align-center">
   <div class="home-sub-container text-center">
-    <h1 class="user-sel">Clothing</h1>
+    <h1 class="user-sel">UrbanTrend</h1>
     <div class="shop-category">
       <a href="{% url 'category_page' category='Men' %}"
         ><button type="button" class="cursor-pointer">Shop Men</button></a
